c19 - Adiciona rodape ao final da pagina

--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
 
   </main>
 
+  <footer class="text-light bg-dark d-flex justify-content-center">
+    <p class="my-2">Direitos reservados à Trybewarts©</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 
