--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
 
-  <header class="header d-flex justify-content-between align-items-center p-2">
+  <header class="header d-flex justify-content-evenly align-items-center p-2">
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo-trybe">
     <h1 id="trybewarts-header-title">Trybewarts</h1>
     <form action="GET" class="trybewarts-login">
-      <input type="email" name="usuario" id="login" class="form-control me-1" placeholder="Login">
-      <input type="password" name="senha" id="senha" class="form-control me-1" placeholder="Senha">
+      <input type="email" name="usuario" id="login" class="form-control me-2" placeholder="Login">
+      <input type="password" name="senha" id="senha" class="form-control me-2" placeholder="Senha">
       <button type="submit" id="button" class="btn btn-primary purpler">Enviar</button>
     </form>
   </header>
@@ -38,8 +38,9 @@
         <div class="col-auto">
           <input type="email" name="email" id="input-email" class="form-control" placeholder="Email">
         </div>
-        <div class="col-auto">
-          <select name="casa" id="house" class="form-select">
+        <div class="col-auto d-flex align-items-center">
+          <label for="escolha" class="mx-2">Casas</label>
+          <select name="casa" id="house" class="form-select" id="escolha">
             <option value="Gitnória" id="gitnoria-house">Gitnória</option>
             <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
             <option value="Corvinode" id="corvinode-house">Corvinode</option>
