--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <header class="header d-flex justify-content-evenly align-items-center p-2">
+  <header class="header d-flex justify-content-between align-items-center p-2">
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo-trybe">
     <h1 id="trybewarts-header-title">Trybewarts</h1>
     <form action="GET" class="trybewarts-login">
@@ -38,7 +38,7 @@
         <div class="col-auto">
           <input type="email" name="email" id="input-email" class="form-control" placeholder="Email">
         </div>
-        <div class="col-auto d-flex align-items-center">
+        <div class="col-auto d-flex align-items-center" id="xablau">
           <label for="escolha" class="mx-2">Casas</label>
           <select name="casa" id="house" class="form-select" id="escolha">
             <option value="Gitnória" id="gitnoria-house">Gitnória</option>
