--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
           </div>
           <div class="comentarios">
             <label class="textarea">Deixe seu comentário:</label>
-            <textarea id="textarea" maxlength="500"></textarea>
+            <textarea  id="textarea" maxlength="500"></textarea>
+            <p id="counter">500</p>
           </div>
         </section>
 
