--- a/index.html
+++ b/index.html
@@ -57,20 +57,31 @@
         <section class="opniao">
           <div class="rate-radio">
             <label for="rate" id="label-rate">Como você avalia a Trybewarts?</label>
-            <input name="rate" type="radio" value="1"><labe>1</labe>
-            <input name="rate" type="radio" value="2"><labe>2</labe>
-            <input name="rate" type="radio" value="3"><labe>3</labe>
-            <input name="rate" type="radio" value="4"><labe>4</labe>
-            <input name="rate" type="radio" value="5"><labe>5</labe>
-            <input name="rate" type="radio" value="6"><labe>6</labe>
-            <input name="rate" type="radio" value="7"><labe>7</labe>
-            <input name="rate" type="radio" value="8"><labe>8</labe>
-            <input name="rate" type="radio" value="9"><labe>9</labe>
-            <input name="rate" type="radio" value="10"><labe>10</labe>
+            <input name="rate" type="radio" value="1">
+            <labe>1</labe>
+            <input name="rate" type="radio" value="2">
+            <labe>2</labe>
+            <input name="rate" type="radio" value="3">
+            <labe>3</labe>
+            <input name="rate" type="radio" value="4">
+            <labe>4</labe>
+            <input name="rate" type="radio" value="5">
+            <labe>5</labe>
+            <input name="rate" type="radio" value="6">
+            <labe>6</labe>
+            <input name="rate" type="radio" value="7">
+            <labe>7</labe>
+            <input name="rate" type="radio" value="8">
+            <labe>8</labe>
+            <input name="rate" type="radio" value="9">
+            <labe>9</labe>
+            <input name="rate" type="radio" value="10">
+            <labe>10</labe>
           </div>
           <div class="comentarios">
             <label class="textarea">Deixe seu comentário:</label>
             <textarea id="textarea" maxlength="500"></textarea>
+            <p id='counter'>500</p>
           </div>
         </section>
 
@@ -78,7 +89,7 @@
           <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
           <input type="checkbox" name="" id="agreement">
         </section>
-
+        <button id="submit-btn">Enviar</button>
     </form>
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
   </main>
